Added Database, AutoMapper, Unit Of Work and DTOs

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Server=NGLA0999LP15025; Database=HotelLisiting_db; User Id = chidinma; Password = chidinma" 
+  },
   "AllowedHosts": "*"
 }
