Added JWT Security As Default Authentication

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -7,7 +7,14 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=NGLA0999LP15025; Database=HotelLisiting_db; User Id = chidinma; Password = chidinma" 
+    "sqlConnection": "Server=NGLA0999LP15025; Database=HotelLisiting_db; User Id = chidinma; Password = chidinma"
+  },
+  "Jwt": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "CIO.Organization",
+    "Key": "4OE;?oSd=)%+YOehn6AQs4Y>g?0@y=ikU!hG1qex3|Z/+u>$N2PGg?h##U8q",
+    "LifeTime": 30
+
   },
   "AllowedHosts": "*"
 }
